# wi

./: 01init.nc  02base.c  02base.nc  03insert_mode.c  03insert_mode.nc  04word.c  04word.nc  05undo.c  06-2file.c  06-2file.nc  06-3file.c  06-3file.nc  06file.c  06file.nc  07yank.nc  08visual.c  08visual.nc  09search.c  09search.nc  10edit-2.c  10edit.nc  11move.nc  12command.c  12command.nc  13completion.nc  14dot.c  14dot.nc  15filer.c  15filer.nc  16mark.c  16mark.nc  17hvisual.nc  18vvisual.c  18vvisual.nc  19rewrite_mode.c  19rewrite_mode.nc  AAA  KKK  Makefile.in  README.md  (+17 more)
